WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139314
[iOS] DumpRenderTree produces many reference test mismatches
https://bugs.webkit.org/show_bug.cgi?id=139314
Summary
[iOS] DumpRenderTree produces many reference test mismatches
Daniel Bates
Reported
2014-12-05 14:02:35 PST
Many reference tests fail due to a scale factor mismatch in the snapshot of the test and the snapshot of its expected result. You can see such mismatches by using run-webkit-tests to run the following set of tests in the iOS Simulator with --fully-parallel, --child-processes=3, --no-retry-failures, --no-sample-on-timeout (*): LayoutTests/css2.1/20110323/at-import-001.htm, LayoutTests/css2.1/20110323/at-import-002.htm, LayoutTests/css2.1/20110323/at-import-003.htm, and LayoutTests/css2.1/20110323/at-import-004.htm. (*) Pass these tests as command line arguments of a single run-webkit-tests run. That is, run something of the form: Tools/Scripts/run-webkit-tests --ios-sim --fully-parallel --child-processes=3 --no-retry-failures --no-sample-on-timeout ... LayoutTests/css2.1/20110323/at-import-001.htm LayoutTests/css2.1/20110323/at-import-002.htm LayoutTests/css2.1/20110323/at-import-003.htm LayoutTests/css2.1/20110323/at-import-004.htm.
Attachments
Patch
(8.64 KB, patch)
2014-12-05 14:07 PST
,
Daniel Bates
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2014-12-05 14:07:49 PST
Created
attachment 242661
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-12-05 14:24:26 PST
Comment on
attachment 242661
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=242661&action=review
> Tools/DumpRenderTree/ios/PixelDumpSupportIOS.mm:88 > + UIGraphicsBeginImageContextWithOptions([[mainFrame webView] frame].size, TRUE, WKGetScreenScaleFactor());
TRUE -> YES
> Tools/DumpRenderTree/mac/Configurations/DumpRenderTreeApp.xcconfig:31 > +OTHER_LDFLAGS_iphoneos = $(inherited) -l$(WEBKIT_SYSTEM_INTERFACE_LIBRARY) -lWebCoreTestSupport -force_load $(BUILT_PRODUCTS_DIR)/libDumpRenderTree.a -framework QuartzCore -framework CFNetwork -framework CoreFoundation -framework CoreGraphics -framework Foundation -framework GraphicsServices -framework ImageIO -framework MobileCoreServices -lMobileGestalt -framework UIKit -framework WebCore -framework JavaScriptCore -framework WebKit $(OTHER_LDFLAGS_FONTS);
Why this change?
Daniel Bates
Comment 3
2014-12-05 15:24:59 PST
(In reply to
comment #2
)
> > Tools/DumpRenderTree/ios/PixelDumpSupportIOS.mm:88 > > + UIGraphicsBeginImageContextWithOptions([[mainFrame webView] frame].size, TRUE, WKGetScreenScaleFactor()); > > TRUE -> YES >
Will fix.
> > Tools/DumpRenderTree/mac/Configurations/DumpRenderTreeApp.xcconfig:31 > > +OTHER_LDFLAGS_iphoneos = $(inherited) -l$(WEBKIT_SYSTEM_INTERFACE_LIBRARY) -lWebCoreTestSupport -force_load $(BUILT_PRODUCTS_DIR)/libDumpRenderTree.a -framework QuartzCore -framework CFNetwork -framework CoreFoundation -framework CoreGraphics -framework Foundation -framework GraphicsServices -framework ImageIO -framework MobileCoreServices -lMobileGestalt -framework UIKit -framework WebCore -framework JavaScriptCore -framework WebKit $(OTHER_LDFLAGS_FONTS); > > Why this change?
Will revert this change. Will fix WebKitSystemInterface for iOS to avoid linking library MobileGestalt.
Daniel Bates
Comment 4
2014-12-05 15:33:25 PST
Committed
r176880
: <
http://trac.webkit.org/changeset/176880
>
Daniel Bates
Comment 5
2014-12-05 15:40:17 PST
<
rdar://problem/18642889
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug